--- a/src-templates/partials/footer.html
+++ b/src-templates/partials/footer.html
@@ -16,7 +16,7 @@
         {{/ is }}
 
         <aside class="prose footer__blog" role="complementary">
-            <h3>From the Blog&hellip;</h3>
+            <h3>From the blog&hellip;</h3>
             <ul>
             {{#each collections.latest}}
                 <li>
