--- a/src-assets/scss/_folio.scss
+++ b/src-assets/scss/_folio.scss
@@ -5,7 +5,12 @@
         display: block;
         text-shadow: none;
         background-image: none;
-        background-color: rgba($beige, 0.85);
+        background-color: $green;
+    }
+
+    .folio {
+        margin: em($baseline/2) 0;
+        &:last-child { margin-bottom: 0; }
     }
 
 }
@@ -13,59 +18,56 @@
 @include non-critical {
 
     .folio {
-        backface-visibility: hidden;
-        margin: em($unit * 2) -#{em($unit * 3)} em($unit * 4) -#{em($unit * 3)};
-        padding: em($unit) 0;
 
-        &:last-child { margin-bottom: 0; }
-
-        .lt-ie9 & {
-            margin: 0;
-        }
     }
 
     .folio__list {
         @include clearfix;
         list-style: none;
-        margin: 0 em(-$unit);
+        margin: 0 em(-$unit*2);
         padding: 0;
     }
 
     .folio__item {
         position: relative;
-        overflow: hidden;
         display: block;
         float: left;
-        margin: em($unit);
+        margin: em($unit*2);
         width: 30%;
-        width: calc(33.33333% - #{em($unit * 2)});
+        width: calc(33.33333% - #{em($unit * 4)});
         font-size: inherit;
         line-height: inherit;
         box-sizing: border-box;
-        border-radius: em(5);
+        border-radius: em(7);
+        perspective: 500px;
     }
 
     .folio__link {
         z-index: $z-index--main + 1;
         @include no-tap-highlight;
-        position: relative;
         display: block;
         width: 100%;
         height: 0;
         overflow: hidden;
-        border-radius: em(5);
-        padding-bottom: percentage(228 / 328);
-        background-color: rgba($beige, 0.85);
-        transition: background-color 200ms ease;
+        border-radius: em(6);
+        padding-bottom: percentage(220 / 330);
+        transition: background 200ms ease;
+        box-shadow: 0 0 0 1px $green,
+                    inset 0 0 0 1px $green,
+                    inset 0 0 0 3px rgba($yellow, 0.8);
+        background: $green url("../img/portfolio.svg") center center no-repeat;
+        background-size: 100% auto;
 
-        &:focus, &:hover {
+        &:hover {
             background-color: rgba($canvas, 0);
+            background-size: 150% auto;
 
 
             .folio__image {
                 opacity: 0.1;
                 filter: #{"grayscale(1)"};
-                transform: scale3d(1.4, 1.4, 1);
+                transform-origin: 50% 50%;
+                transform: scaleX(0.9) scaleY(0.9);
             }
 
             .folio__label {
@@ -74,20 +76,20 @@
         }
 
 
-        .lt-ie9 & {
-            padding-bottom: percentage(200 / 300);
+        // .lt-ie9 & {
+        //     padding-bottom: percentage(200 / 300);
 
-            &:focus, &:hover {
+        //     &:focus, &:hover {
 
-                .folio__image {
-                    visibility: hidden;
-                }
+        //         .folio__image {
+        //             visibility: hidden;
+        //         }
 
-                .folio__label {
-                    visibility: visible;
-                }
-            }
-        }
+        //         .folio__label {
+        //             visibility: visible;
+        //         }
+        //     }
+        // }
     }
 
     .folio__label {
@@ -107,10 +109,10 @@
         transition: opacity 200ms ease;
         text-shadow: 2px 2px 0 rgba($black, 0.2);
 
-        .lt-ie9 & {
-            visibility: hidden;
-            margin-top: em(-($h4 / 2), $h4);
-        }
+        // .lt-ie9 & {
+        //     visibility: hidden;
+        //     margin-top: em(-($h4 / 2), $h4);
+        // }
     }
 
     .folio__image {
@@ -118,13 +120,19 @@
         position: absolute;
         top: 0;
         left: 0;
-        top: calc(0% + #{em($unit * 2)});
-        left: calc(0% + #{em($unit * 2)});
-        border-radius: em(4);
+        top: calc(0% + #{em($unit)});
+        left: calc(0% + #{em($unit * 1.5)});
         opacity: 1;
         width: 100%;
-        width: calc(100% - #{em($unit * 4)});
+        border-radius: em(7);
+        width: calc(100% - #{em($unit * 3)});
+        transform-style: preserve-3d;
+        // transform-origin: 50% 0%;
+        transform: rotateY(-30deg) rotateX(2deg) translateX(-7%);
         transition: opacity 200ms ease, filter 200ms ease, transform 200ms ease;
+        backface-visibility: hidden;
+        // box-shadow: 0 0 0 4px $green,
+                    // 0 0 0 6px $yellow;
     }
 
 
@@ -140,7 +148,7 @@
     {
         .folio__item {
             width: 45%;
-            width: calc(50% - #{em($unit * 2)});
+            width: calc(50% - #{em($unit * 4)});
         }
     }
 }
