--- a/src-assets/scss/style.scss
+++ b/src-assets/scss/style.scss
@@ -8,7 +8,7 @@
 @import "typography";
 @import "form";
 @import "post";
-@import "hero";
+// @import "hero";
 @import "folio";
 @import "home";
 @import "header";
