--- a/src-assets/scss/_typography.scss
+++ b/src-assets/scss/_typography.scss
@@ -179,7 +179,7 @@
   }
 
   ul {
-    list-style-image: url("../img/bullet.svg");
+    list-style-image: url("/assets/img/bullet.svg");
   }
 
   li {
