--- a/src-assets/scss/_typography.scss
+++ b/src-assets/scss/_typography.scss
@@ -24,23 +24,37 @@
     color: $blue;
     text-decoration: none;
     cursor: pointer;
-    background-image: linear-gradient(to right, rgba($green, 1) 0%, rgba($green, 1) 100%);
-    background-repeat: repeat-x;
-    background-size: 100% 2px;
-    background-position: 0 90%;
+    background-image: linear-gradient(to right, $yellow 50%, $green 50%);
+    background-repeat: no-repeat;
+    background-size: 200% 2px;
+    background-position: 100% 90%;
     text-shadow: 2px 0 0 $beige, -2px 0 0 $beige;
 
     &:not([class]):focus,
     &:not([class]):hover {
       outline: 0;
       text-shadow: none;
-      background-image: linear-gradient(to right, rgba($yellow, 1) 0%, rgba($yellow, 1) 100%);
-      background-size: 100% 7px;
-      background-position: 0 90%;
+      // background-image: linear-gradient(to right, rgba($yellow, 1) 0%, rgba($yellow, 1) 100%);
+      // background-size: 200% 7px;
+      // background-position: 0 90%;
+      animation: animateGradient 800ms forwards;
     }
 
     .footer & {
       text-shadow: 2px 0 0 $white, -2px 0 0 $white;
+    }
+  }
+
+  @keyframes animateGradient {
+    0% {
+      background-position: 100% 90%;
+    }
+    99% {
+      background-position: 0% 90%;
+    }
+    100% {
+      background-position: 0% 90%;
+      background-size: 200% 7px;
     }
   }
 
@@ -49,33 +63,33 @@
     margin: 0;
     font-weight: 500;
     color: $blue;
-    text-shadow: //-1px 0 0 rgba($beige, 1),
-                 //,
-                 2px 2px 0 rgba($green, 0.5);
-                 // -2px 2px 0 rgba($beige, 1),
-                 // 4px 2px 0 rgba($beige, 1);
+    // text-shadow: //-1px 0 0 rgba($beige, 1),
+    //              //,
+    //              2px 2px 0 rgba($green, 0.5);
+    //              // -2px 2px 0 rgba($beige, 1),
+    //              // 4px 2px 0 rgba($beige, 1);
 
-    // .footer & {
-    //   text-shadow: -1px 0 0 rgba($white, 1),
-    //                1px 1px 0 rgba($white, 1),
-    //                2px 3px 0 rgba($green, 0.8);
-    // }
+    // // .footer & {
+    // //   text-shadow: -1px 0 0 rgba($white, 1),
+    // //                1px 1px 0 rgba($white, 1),
+    // //                2px 3px 0 rgba($green, 0.8);
+    // // }
 
     &:last-child {
       margin-bottom: 0;
     }
 
     a {
-      text-shadow: inherit;
-      background-position: 0 95%;
+      // text-shadow: inherit;
+      // background-position: 100 95%;
 
-      &:focus, &:hover {
-        text-shadow: inherit;
-      }
+      // &:focus, &:hover {
+      //   text-shadow: inherit;
+      // }
 
-      .footer & {
-        text-shadow: inherit;
-      }
+      // .footer & {
+      //   text-shadow: inherit;
+      // }
     }
   }
 
@@ -145,7 +159,7 @@
     @include font-size($p--small, $unit * 4);
 
     a {
-      background-size: 100% 1px;
+      background-size: 200% 1px;
     }
   }
 
