--- a/src-templates/partials/nav.html
+++ b/src-templates/partials/nav.html
@@ -2,25 +2,25 @@
 <nav class="nav nav--flex" id="nav" role="navigation">
     <h2 class="nav__title">Website Navigation</h2>
     <ul class="nav__list" data-root="true">
-        <li class="nav__item" data-priority="1">
+        <li class="nav__item" data-priority="1" data-order="1">
             <a href="{{ site_url }}" class="nav__link">Home</a>
         </li>
-        <li class="nav__item" data-priority="4">
+        <li class="nav__item" data-priority="4" data-order="2">
             <a href="{{ site_url 'about' }}" class="nav__link">About</a>
         </li>
-        <li class="nav__item" data-priority="2">
+        <li class="nav__item" data-priority="2" data-order="3">
             <a href="{{ site_url 'services' }}" class="nav__link">Services</a>
         </li>
-        <li class="nav__item" data-priority="5">
+        <li class="nav__item" data-priority="5" data-order="4">
             <a href="{{ site_url 'showcase' }}" class="nav__link">Portfolio</a>
         </li>
-        <li class="nav__item" data-priority="6">
+        <li class="nav__item" data-priority="6" data-order="5">
             <a href="{{ site_url 'blog' }}" class="nav__link">Blog</a>
         </li>
-        <li class="nav__item" data-priority="3">
+        <li class="nav__item" data-priority="3" data-order="6">
             <a href="{{ site_url 'contact' }}" class="nav__link">Contact</a>
         </li>
-        <li class="nav__item nav__item--icons" data-priority="7">
+        <li class="nav__item nav__item--icons" data-priority="7" data-order="7">
             <a class="nav__link nav__link--twitter" rel="me" target="_blank" title="David Bushell on Twitter" href="http://twitter.com/dbushell">
                 <svg role="presentation"><use xlink:href="{{ site_url }}assets/img/icons.svg#twitter"></use></svg>
                 <span>@dbushell</span>
@@ -34,11 +34,11 @@
                 <span>CodePen</span>
             </a>
         </li>
-        <li class="nav__item nav__item--more nav__item--hidden" data-overflow="true">
+        <li class="nav__item nav__item--more">
             <a class="nav__link">
                 <svg role="presentation"><use xlink:href="{{ site_url }}assets/img/icons.svg#nav"></use></svg>
             </a>
-            <ul class="nav__list"></ul>
+            <ul class="nav__list nav__dropdown"></ul>
         </li>
     </ul>
 </nav>
