--- a/src-assets/scss/_post.scss
+++ b/src-assets/scss/_post.scss
@@ -68,8 +68,8 @@
         }
 
         a {
-            text-shadow: none !important;
-            background: none !important;
+            text-shadow: none;
+            background: none;
         }
     }
 
