--- a/src-assets/scss/_footer.scss
+++ b/src-assets/scss/_footer.scss
@@ -37,6 +37,7 @@
         overflow: hidden;
         border-radius: em(10);
         margin: em($baseline) 0;
+        max-width: em(400);
 
         img {
             width: 100%;
@@ -186,6 +187,11 @@
         .footer__avatar {
             width: em($unit * 16);
             height: em($unit * 16);
+        }
+
+        .footer__hire {
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 
