--- a/src-assets/scss/_typography.scss
+++ b/src-assets/scss/_typography.scss
@@ -17,7 +17,10 @@
     border: 0;
     outline: none;
     border-top: 2px solid $canvas;
-    // border-bottom: 1px solid $yellow;
+
+    .footer & {
+      border-color: $beige;
+    }
   }
 
   a {
@@ -37,7 +40,7 @@
       // background-image: linear-gradient(to right, rgba($yellow, 1) 0%, rgba($yellow, 1) 100%);
       // background-size: 200% 7px;
       // background-position: 0 90%;
-      animation: animateGradient 300ms forwards;
+      animation: animateGradient 200ms forwards;
     }
 
     .footer & {
@@ -63,39 +66,10 @@
     margin: 0;
     font-weight: 500;
     color: $blue;
-    // text-shadow: //-1px 0 0 rgba($beige, 1),
-    //              //,
-    //              2px 2px 0 rgba($green, 0.5);
-    //              // -2px 2px 0 rgba($beige, 1),
-    //              // 4px 2px 0 rgba($beige, 1);
-
-    // // .footer & {
-    // //   text-shadow: -1px 0 0 rgba($white, 1),
-    // //                1px 1px 0 rgba($white, 1),
-    // //                2px 3px 0 rgba($green, 0.8);
-    // // }
 
     &:last-child {
       margin-bottom: 0;
     }
-
-    a {
-      // text-shadow: inherit;
-      // background-position: 100 95%;
-
-      // &:focus, &:hover {
-      //   text-shadow: inherit;
-      // }
-
-      // .footer & {
-      //   text-shadow: inherit;
-      // }
-    }
-  }
-
-  h4, h5, h6,
-  .h4, .h5, .h6 {
-    // text-shadow: none;
   }
 
   @include respond-min($breakpoint--mini)
@@ -507,9 +481,7 @@
     h1, h2, h3,
     .h1, .h2, .h3 {
       color: $yellow;
-      text-shadow: -1px 0 0 rgba($pink, 1),
-                   2px 2px 0 rgba($pink, 1),
-                   3px 3px 0 rgba($yellow, 0.5);
+      text-shadow: 3px 3px 0 rgba($dark-red, 0.5);
     }
 
     blockquote {
